# flirt

./: .gitignore  FLIRT Prototype (standalone).html  FLIRT TZ.docx  PROGRESS.md  README.md  SECURITY.md
.context/: CHEI_EXTERNE.md  DESIGN_TOKENS.md  TZ.txt
.github/workflows/: ci.yml
admin/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin/src/: App.tsx  main.tsx  vite-env.d.ts
admin/src/api/: admin.ts  client.test.ts  client.ts  types.ts
admin/src/auth/: AuthContext.tsx  RequireAdmin.tsx  tokenStore.ts
admin/src/components/: ConfirmDialog.tsx  Layout.tsx  Modal.tsx  ui.tsx
admin/src/lib/: errors.ts  format.ts
admin/src/pages/: AdsPage.test.tsx  AdsPage.tsx  (+13 more)
backend/: .coverage  .dockerignore  .env.example  .env.production.example  Dockerfile  Makefile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b8c36301d01_chat_chats_messages.py  164b16936bbd_moderation_reports.py  1bcd6214fd44_deferred_message_and_reaction_columns.py  348f5f8aecf9_events_attendance_passport.py  44a4f88ea0b7_stories.py  563047d74f41_initial_schema.py  64f32c9f9dad_profile_verified_column.py  7b7229e487a0_account_settings_favorites_blocks_.py  8a291f32a005_swipe_likes_matches.py  9d4c7f21ab30_search_preferences_geo_activity_indexes.py  a3f5e9c14b72_perf_indexes_chat_stories_events.py  a9e3c5b71f28_user_settings_ai_enabled.py  b3d9f1a2c7e5_story_media_type.py  b8d2e5a91c34_subscriptions_card_entries.py  c1792e250ccf_subscriptions_and_push_devices.py  c8e1b47d20fa_interest_labels_uk_en.py  d3f7a1c96b28_ticket_orders_payment_settings.py  d5a1c7e93b40_admin_role_ban_audit_log.py  d7b34f1e8a92_like_is_super.py  e2d7b9a4c1f5_ads_targeting_scheduling_tracking.py  e7c4a9b2f1d0_user_deleted_at_gdpr.py  f2a81d6c40e5_purchase_receipts_anti_replay.py  f4b2c9a1e7d3_ads_and_ad_settings.py  f7a3c1e908b2_events_promo_discount.py
backend/app/: main.py
backend/app/api/: legal.py
backend/app/api/v1/: ads.py  auth.py  chat.py  events.py  feed.py  health.py  humor.py  profiles.py  push.py  reports.py  router.py  settings.py  social.py  stories.py  subscriptions.py  ticket.py  ticket_orders.py
backend/app/api/v1/admin/: __init__.py  ads.py  audit.py  auth.py  events.py  moderation.py  stats.py  subscriptions.py  ticket_orders.py  users.py
backend/app/core/: config.py  deps.py  logging.py  ratelimit.py  security.py  validators.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  account.py  ad.py  admin.py  billing.py  chat.py  device.py  event.py  interest.py  moderation.py  profile.py  session.py  story.py  swipe.py  ticket_order.py  user.py
backend/app/schemas/: account.py  ad.py  admin.py  auth.py  billing.py  chat.py  event.py  feed.py  humor.py  moderation.py  profile.py  story.py  ticket_order.py
backend/app/services/: account_service.py  ad_service.py  admin_service.py  ai.py  auth_providers.py  auth_service.py  billing.py  chat_service.py  compatibility.py  contact_masker.py  event_service.py  face_verify.py  feed_service.py  geo.py  humor_service.py  moderation_service.py  pagination.py  photo_moderation.py  profile_service.py  push.py  storage.py  story_service.py  ticket_order_service.py
backend/app/templates/legal/: _base.html  index.html  privacy.html  support.html  terms.html
backend/nginx/: 40-ensure-cert.sh  entrypoint.sh  nginx.conf
backend/scripts/: backup_db.sh  bootstrap_server.sh  build_admin.sh  certbot_entrypoint.sh  create_admin.py  create_test_users.py  gdpr_purge.py  restore_db.sh  seed_extra_users.py  seed_load_data.py
backend/tests/: conftest.py  test_account.py  test_account_service_unit.py  test_admin.py  test_admin_security.py  test_ads.py  test_ai_openrouter.py  test_auth.py  test_auth_live.py  test_billing.py  test_billing_appstore.py  test_billing_play.py  test_block_gdpr_security.py  test_bughunt_auth_accounts.py  test_bughunt_feed_chat.py  test_bughunt_zone.py  test_chat.py  test_compatibility_unit.py  test_config.py  test_e2e_journey.py  test_event_service_unit.py  test_events.py  test_face_verify.py  test_feed.py  test_feed_security.py  test_geo_live.py  test_humor.py  test_humor_service_unit.py  test_integrations_stub.py  test_legal.py  test_masker_unit.py  test_moderation.py  test_moderation_service_unit.py  test_ops.py  test_perf_queries.py  test_photo_moderation.py  test_photo_url_schemes.py  test_profile_service_unit.py  test_profiles.py  test_push_billing_live.py  (+12 more)
docs/: 01-overview.md  DEPLOYMENT.md  INTEGRATIONS.md  README.md  architecture.md
docs/admin/: README.md  api.md  frontend.md
docs/backend/: README.md  api-spec.md  data-models.md  security.md
docs/design-system/: README.md  colors.md  components.md  typography.md
docs/frontend/: README.md  navigation.md  screens.md  styling.md
mobile/: app.json  babel.config.js  eas.json  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json  web-import-meta-plugin.js
mobile/app/: _layout.tsx  blocklist.tsx  favorites.tsx  home.tsx  humor.tsx  index.tsx  passport.tsx  paywall.tsx  ticket.tsx  verify-face.tsx
mobile/coverage/: clover.xml  coverage-final.json  lcov.info
mobile/src/: config.ts
mobile/theme/: ThemeProvider.tsx  colors.ts  index.ts  typography.ts
(+316 files in other folders)
