[project]
name = "flirt-backend"
version = "0.1.0"
description = "FLIRT — No Regrets · backend API (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.1",
    "httpx>=0.27",
    # Verificarea achizițiilor App Store (StoreKit 2): biblioteca OFICIALĂ Apple.
    # Verifică semnătura JWS-ului și lanțul x5c până la Apple Root CA G3, local, fără
    # apel de rețea. Nu e în extra-ul `live` pentru că fără ea providerul `app_store`
    # (adică PRODUCȚIA) nu poate valida nicio plată — nu e opțională, e critică.
    "app-store-server-library>=1.5",
    # JWT-ul de service account pentru Google Play (schimb OAuth2 jwt-bearer).
    # Vine oricum ca dependență a bibliotecii Apple; îl declarăm explicit fiindcă îl
    # importăm direct (dependență implicită = bombă cu ceas la un upgrade).
    "pyjwt>=2.8",
    # Moderarea automată a pozelor (NSFW) cu Claude vision — cerință Apple
    # Guideline 1.2. Ca și biblioteca Apple de mai sus, NU e opțională: fără ea
    # providerul `anthropic` (adică producția) nu poate modera nicio poză.
    "anthropic>=0.40",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    # Testele rulează pe POSTGRESQL real (ca producția), NU pe SQLite. asyncpg e deja
    # în dependențele principale. `testcontainers` pornește automat un Postgres efemer
    # când `TEST_DATABASE_URL` nu e furnizat (dev local); în CI se folosește un serviciu
    # Postgres, mai rapid. aiosqlite a fost SCOS: nu mai testăm pe alt motor decât prod.
    "testcontainers[postgres]>=4.0",
    "boto3>=1.34",
    "redis>=5.0",
]
# Dependențe pentru integrările LIVE (producție). Instalează: pip install .[live]
live = [
    "httpx>=0.27",
    "boto3>=1.34",
    "redis>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Un SINGUR event-loop pentru toată sesiunea de test. Necesar acum că testele rulează
# pe Postgres real: engine-ul aplicației (creat o dată, la import) și pool-ul lui asyncpg
# sunt legate de loop-ul care i-a creat. Cu loop function-scoped, fiecare test avea alt
# loop → „Task attached to a different loop". Cu loop de sesiune, engine-ul aplicației
# funcționează în toate testele.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
